--- a/Quatro_doc.qmd
+++ b/Quatro_doc.qmd
@@ -6,6 +6,8 @@ editor: visual
 
 ## Quarto
 
+My github: https://github.com/DanielJSS/Biostat2_exam
+
 1.  **Paper**:
 
 Maureaud Aurore, Hodapp Dorothee, van Denderen P. Daniël, Hillebrand Helmut, Gislason Henrik, Spaanheden Dencker Tim, Beukhof Esther and Lindegren Martin. 2019, Biodiversity--ecosystem functioning relationships in fish communities: biomass is related to evenness and the environment, not to species richnessProc. R. Soc. B.2862019118920191189 http://doi.org/10.1098/rspb.2019.1189
@@ -16,11 +18,11 @@ Maureaud, Aurore et al. (2019), Data from: Biodiversity-ecosystem functioning re
 
 2.  When it comes to how well I was able to reproduce the part of the paper I was working on, I think I managed to make the plot look rather similar. The colors, axis increments, arrows, and dots looks similar. The data set had a "readME" file explaining what the variables mean, and In the paper itself, the figure text did explain well what was on the different axis making reproducing the plot not such a difficult task. What was difficult was getting a guide legend for the Dissimilarity as shown in the original paper. I added code for this, as I have done before on other projects, however nothing papers to show up on my plot and after many attempts and research I could not figure out why it does not show up. Furthermore, the original paper includes some pie charts with images of fish, and I believe these were added after the fact in a different program like inkscape. Looking through their code after the fact, the code does not include the guide that I struggled with getting, therefore this was added later and not in the code itself. Meaning that much of the figure was a combination of code and some drawing software making it hard to reproduce identically.
 
-    ![My attemt at recreating figure 3 form the paper](Figure%203.png)
+    ![My attempt at recreating figure 3 form the paper](Figure%203.png)
 
 3.  In the paper itself, they have a section on data availability, there they explain that all data in on "datadryad.org" and that an R code for all figures and Statistics is available in the electronic supplement material. This is a good thing for reproduce-ability The code itself was available, and the link did work. The code is written nicely, but with little expectation on what the lines of code does. Making this difficult to interpret exactly why the code was written the way that it was. a readME file was added in the github, providing some instructions on the data and code, making this easier for others to reproduce. The github repository has the data and a readme file, however no revn project, therefor it could be more transparent and reproducible. For the authors to use the best practice for reproducability, they could have added better comments to know what the code did and why, having good code documentation could have made this more reproducible and understandable. They could have added a revn project in their github to be more transparent to what packages and versions were used, making a more reproducible environment. While the data itself was available on both datadryad and github, I am not sure whether this is the RAW data or this has been cleaned by hand. It would be optimal if they added their raw data on places like Neotome, to be more transparent making sure they did not clean the data with a bias or with bad intent.
 
-## Running Code
+## Running Code for part A
 
 ```{r}
 # Required packages
@@ -92,3 +94,152 @@ plot <- ggplot(data, aes(x = evesimpson, y = biomass/1000000, color = jac)) +
 # Display the plot
 print(plot)
 ```
+
+**Part B**
+
+1.  [**A colleague is testing the effect of a treatment on fish growth. They have ten tanks (five for each treatment). Each tank with ten fish. They plan to fit the model**]{.underline}
+
+[**Answer:**]{.underline}
+
+-   The main issue with this plan is that they only look at treatment as the predictor variable. As if treatment is the only thing that will in any way effect the outcome. If this was the only thing that was different between experiments, this could work. However, here the fish is also in different tanks. Meaning we cannot just ignore the effects of the tanks, at least not without testing for it first. Therefor, just assuming a linear model with only treatment as predictor is not a good plan, and ignores the effect tanks might have for the results outcome.
+
+-   Simulate the data, and show the problem of this model
+
+```{r}
+#Simulating the data to show the problem 
+set.seed(123)  # Setting seed for reproducibility
+
+# Simulating the data
+treatment <- rep(c("A", "B"), each = 50)
+tank <- rep(1:5, times = 20)
+fish <- rep(1:10, times = 10)
+growth <- rnorm(100, mean = ifelse(treatment == "A", 10, 12), sd = 2)
+
+# Creating the data frame
+fish_data <- data.frame(treatment, tank, fish, growth)
+
+# Fitting the initial model
+initial_model <- lm(growth ~ treatment, data = fish_data)
+
+# Displaying the model summary
+summary(initial_model)
+```
+
+#Coefficients:
+
+\# Estimate Std. Error t value Pr(\>\|t\|)
+
+\# (Intercept) 10.0688 0.2590 38.875 \< 2e-16 \*\*\*
+
+\# treatmentB 2.2240 0.3663 6.072 [2.4e-08 \*\*\*]{.underline}
+
+As we can see on the output of the lm model, the model suggests that treatment does have a significant effect on growth compared to treatment A due to the less than 0.05 P value. However, since this data set is simulated, there is no actual difference between treatment A and treatment B. The model gives false indication of effect due to the fact that it fail to take in top account the effects of different tanks on the growth.
+
+-   [Suggest a better model and show that it performs better]{.underline}
+
+A potential better model would be one that take in to account the effect of the tanks as a predictor. This would be a mixed effects model. By using a mixed effect model, also known as random-effects model, we can model the random effects tank will have on the growth, and give an understanding of within-tank variability.
+
+```{r}
+#Creating a mixed effects model to include tank as a predicotr variable. 
+mixed_model <- lmer(growth ~ treatment + (1 | tank), data = fish_data)
+#Showing model sumamry 
+summary(mixed_model)
+```
+
+![Mixed effect model output](images/mixed effect model 2.JPG)
+
+The model did get an error code with "boundary (singular) fit: see help('isSingular') ", menaing that there is a near perfect collinearity between the variables. Meaning it cannot give accurate description of the model.
+
+I tried different mixed effects model like
+
+mixed_model \<- lmer(growth \~ treatment + (1 + treatment \| tank), data = fish_data)
+but with the same result of this error code.
+
+therefore I will try a GLMM to see if the issue goes away
+
+```{r}
+glmm_model <- glmer(growth ~ treatment + (1 | tank), data = fish_data, family = Gamma())
+summary(glmm_model)
+```
+
+![GLMM output](images/glmm.JPG)
+
+While the error code persisted, the estimate of treatment now has a much wider confidence interval (-0.017) meaning it does contain the value 0, this fits better with the simulated data where there is no effect of treatment.
+
+2.  [**What advice do you give the authors?**]{.underline}
+
+My first advice would be to try and discuss the small effect size of their study rather than imminently trying to artificially enahnce their results. They do not interpret the practical significance of the effect size, trying to find an explanation and the implications of having such a small effect size is important to understanding the impacts of the treatment.
+
+Interpreting the findings of artificially enhances sample size should be done with caution. I would recommend the authors to not be so brass as to state the significance of their findings without discussing the potential limitations and biases assisted with the method they used to acquire this artificial result. they need to discuss this and justify their use of this method and whether or not it can be trusted due to the artificial enhancement.
+
+Even if the p value was significant the second time around , they do not discuss what this actually means in terms of practical significance. What does this mean for the real world, merely getting statistically significant result should not be the "end all be all" of data analyses. one needs to apply real world meaning to our findings and not just show a p value and expect it to tell a story on its own and be enough to show a valid result.
+
+I would also recommend them to look in to other factors which can interfere with their results like study design, measurement instrument error, human error etc. that may have influenced the statistical analyses.
+
+3.  The lynx dataset. Plot the data then examine the acf and pacf for these data. What can you infer from these about the type of autocorrelation in these data?
+
+```{r}
+#use the package datasets 
+#load in the data from lynx and make a time series 
+
+data("lynx")
+
+lynx_ts <- ts(lynx, start = 1821, end = 1934, frequency = 1)
+```
+
+```{r}
+#Creating the plot 
+ggplot() +
+  geom_line(aes(x = time(lynx_ts), y = lynx_ts), color = "#1f78b4", linewidth = 1) +
+  theme_minimal() +
+  labs(x = "Year", y = "Number of Lynx",
+       title = "Number of Lynx Trapped in Canada (1821-1934)",
+       plot.caption = "Data Source: Lynx Dataset") +
+  theme(plot.title = element_text(size = 16, face = "bold"),
+        plot.caption = element_text(hjust = 1, size = 10),
+        axis.text = element_text(size = 12),
+        axis.title = element_text(size = 14),
+        panel.grid.major = element_line(color = "#DDDDDD"),
+        panel.grid.minor = element_blank())
+```
+
+![Lynx TS plot](Lynx TS plot.png)
+
+[Now over to examine the acf and pacf:]{.underline}
+
+```{r}
+# Calculate the ACF and PACF
+acf_result <- acf(lynx_ts, lag.max = 30)
+pacf_result <- pacf(lynx_ts, lag.max = 30)
+
+# Plot the ACF
+plot(acf_result, main = "ACF of Lynx Data")
+
+# Plot the PACF
+plot(pacf_result, main = "PACF of Lynx Data")
+
+```
+
+![ACF output](ACF lynx.png)
+
+![PACF output](PACF of lynx.png)
+
+When looking at ACF plots, we look for spikes above the blue line, if the plot has these lines about the blue dashed like it indicates auto correlations of the lags.
+
+In this instance, the spikes seemsto be exponentially declining in the ACF plot, while in the PCAF plot contains spike in the first and more lags. Whit these criteria met, it seems as if this is an auto regressive process. And since the first spike of the ACF plot is significant, and after which an exponential decline occurs, we can infer that this is a first order auto regressive process. Given the amount of spikes above the dashed line in the ACF plot, there is a strong autocorrelation present in the data. this means that the current level of lynx population is dependent on the amount of lynx in the previous time step with some lagged effect.
+
+4.  Chironomid species richness
+
+```{r}
+# Set the file path
+file_path <- "chironomid.txt"
+
+# Read the TXT file
+data <- read.table(file_path, header = TRUE)
+
+# Convert it into a dataframe
+df <- as.data.frame(data)
+
+```
+
+The response variable here is species richness, given how this is count data (number of species). Models normally used for count data is Poisson distribution. The poisson distribution also assumes independence. Meaning here that the presence/absence of one species in the area does not affect the presence or absence of another. This can be true in ecological studies, usually since if there are multiple species cohabitation in an area they usually fill completely or at least slightly different ecological niches. If they had the same niche, they would compete and one would eventually win and outcompete the other to extinction.
