--- a/Quatro_doc.qmd
+++ b/Quatro_doc.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Quatro_doc"
-format: html
+format: pdf
 editor: visual
 ---
 
@@ -26,7 +26,7 @@ Maureaud, Aurore et al. (2019), Data from: Biodiversity-ecosystem functioning re
 
 ```{r}
 # Required packages
-required_packages <- c("tidyverse", "readxl", "viridisLite", "scales", "ggplot2", "lme4", "datasets", "knitr")
+required_packages <- c("tidyverse", "readxl", "viridisLite", "scales", "ggplot2", "lme4", "datasets", "knitr", "quarto", "tinytex")
 
 # Install required packages if not already installed
 for (pkg in required_packages) {
